# blog

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  pyproject.toml  requirements.txt  sitemap.xml
blog/: index.html
config/alacritty/: index.html
config/docker/: index.html
config/git/: index.html
config/python/: index.html
config/terminal/: index.html
config/wsl/: index.html
config/zsh/: index.html
docs/: git.md  index.md  python.md  terminal.md  wsl.md  zsh.md
docs/config/: alacritty.md  docker.md  python.md  terminal.md  zsh.md
docs/en/: index.md
docs/javascripts/: katex.js
en/: index.html
git/: index.html
python/: index.html
search/: search_index.json
terminal/: index.html
wsl/: index.html
zsh/: index.html
